--- a/apps/main/configs/debug.yaml
+++ b/apps/main/configs/debug.yaml
@@ -1,6 +1,6 @@
 # Template config, need to change dump_dir, data.root_dir and tokenizer.path
 
-# dump_dir: !!CHANGETHIS!!
+dump_dir: /fsx-checkpoints/new/lingua_dumps/test
 name: "debug"
 steps: 1000
 probe_freq: 100
@@ -25,9 +25,10 @@ model:
     n_heads: 8
 
 data:
-    root_dir: data/shuffled
+    root_dir: /fsx-data-quality-law/new/data/RedPajama
     sources:
-        dclm_baseline_1.0: 1.0
+        2014-15/head/orig: 1.0
+        2014-23/head/orig: 1.0
     batch_size: 32
     prefetch_size: 64
     seq_len: 2048
@@ -35,7 +36,7 @@ data:
     load_async: true
     tokenizer:
         name: sp
-        path: tokenizers/tokenizer_final_32k.minus_inf_ws.model
+        path: /fsx-labs/broz/data/large_experiments/theorem/datasets/tokenizers/tokenizer_final_32k.minus_inf_ws.model
 
 profiling:
     run: true
