--- a/apps/main/configs/scaling_law/SL200M.yaml
+++ b/apps/main/configs/scaling_law/SL200M.yaml
@@ -1,7 +1,7 @@
 include: ["apps/main/configs/scaling_law/base.yaml"]
 
-#total_num_tokens = 5000 * 2M = 10B
-steps: 5000
+#total_num_tokens = 20_000 * 1M = 20B
+steps: 20_000
 
 model:
     dim: 1056
