--- a/apps/main/configs/llama_1B.yaml
+++ b/apps/main/configs/llama_1B.yaml
@@ -1,4 +1,6 @@
 # dump_dir: !!!CHANGE_THIS!!!
+
+dump_dir: /fsx-checkpoints/new/lingua_dumps/test
 name: large_lm
 steps: 60_000
 probe_freq: null
@@ -25,9 +27,9 @@ model:
   n_heads: 16
 
 data:
-  root_dir: data/shuffled
+  root_dir: /data/home/feiyang/feiyang/trlingua/lingua/setup/data/
   sources:
-    dclm_baseline_1.0: 100.0
+      fineweb_edu_10bt_shuffled: 1.0
   batch_size: 4
   prefetch_size: 1024
   seq_len: 4096
@@ -37,7 +39,7 @@ data:
   add_eos: true
   tokenizer:
     name: tiktoken
-    path: tokenizers/cl_toplang_128k.tiktoken
+    path: /data/home/feiyang/.llama/checkpoints/Llama3.2-1B/tokenizer.model
 
 profiling:
   run: true
